// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layout|Arrangement Inlining elements 1`] = `
<div
  className="css-m9xbk1"
>
  <div
    className="css-1qxtczr"
    spacing={
      Array [
        8,
        16,
      ]
    }
  >
    <div
      className="css-137oz10"
    >
      full width row 1
    </div>
    <div
      className="css-137oz10"
    >
      full width row 2
    </div>
    <div
      className="css-137oz10"
    >
      full width row 3
    </div>
    <div
      className="css-137oz10"
    >
      full width row 4
    </div>
    <div
      className="css-137oz10"
    >
      full width row 5
    </div>
    <div
      className="css-137oz10"
    >
      full width row 6
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout|Arrangement Inlining elements with snapshot 1`] = `
<div
  className="css-m9xbk1"
>
  <div
    className="css-1qxtczr"
    spacing={
      Array [
        8,
        16,
      ]
    }
  >
    <div
      className="css-137oz10"
    >
      full width row 1
    </div>
    <div
      className="css-137oz10"
    >
      full width row 2
    </div>
    <div
      className="css-137oz10"
    >
      full width row 3
    </div>
    <div
      className="css-137oz10"
    >
      full width row 4
    </div>
    <div
      className="css-137oz10"
    >
      full width row 5
    </div>
    <div
      className="css-137oz10"
    >
      full width row 6
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout|Arrangement Stacking elements 1`] = `
<div
  className="css-m9xbk1"
>
  <div
    className="css-1a9y87q"
    spacing={
      Array [
        8,
        16,
      ]
    }
  >
    <div
      className="css-137oz10"
    >
      full width row 1
    </div>
    <div
      className="css-137oz10"
    >
      full width row 2
    </div>
    <div
      className="css-137oz10"
    >
      full width row 3
    </div>
    <div
      className="css-137oz10"
    >
      full width row 4
    </div>
    <div
      className="css-137oz10"
    >
      full width row 5
    </div>
    <div
      className="css-137oz10"
    >
      full width row 6
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout|Arrangement Stacking elements with snapshot 1`] = `
<div
  className="css-m9xbk1"
>
  <div
    className="css-1a9y87q"
    spacing={
      Array [
        8,
        16,
      ]
    }
  >
    <div
      className="css-137oz10"
    >
      full width row 1
    </div>
    <div
      className="css-137oz10"
    >
      full width row 2
    </div>
    <div
      className="css-137oz10"
    >
      full width row 3
    </div>
    <div
      className="css-137oz10"
    >
      full width row 4
    </div>
    <div
      className="css-137oz10"
    >
      full width row 5
    </div>
    <div
      className="css-137oz10"
    >
      full width row 6
    </div>
  </div>
</div>
`;

exports[`Storyshots Layout|Arrangement Stacking inlines 1`] = `
<div
  className="css-m9xbk1"
>
  <div
    className="css-1a9y87q"
    spacing={
      Array [
        8,
        16,
      ]
    }
  >
    <span
      className="css-137oz10"
    >
      full width row 1
    </span>
    <span
      className="css-137oz10"
    >
      full width row 2
    </span>
    <span
      className="css-137oz10"
    >
      full width row 3
    </span>
    <span
      className="css-137oz10"
    >
      full width row 4
    </span>
    <span
      className="css-137oz10"
    >
      full width row 5
    </span>
    <span
      className="css-137oz10"
    >
      full width row 6
    </span>
  </div>
</div>
`;

exports[`Storyshots Layout|Arrangement Stacking inlines with snapshot 1`] = `
<div
  className="css-m9xbk1"
>
  <div
    className="css-1a9y87q"
    spacing={
      Array [
        8,
        16,
      ]
    }
  >
    <span
      className="css-137oz10"
    >
      full width row 1
    </span>
    <span
      className="css-137oz10"
    >
      full width row 2
    </span>
    <span
      className="css-137oz10"
    >
      full width row 3
    </span>
    <span
      className="css-137oz10"
    >
      full width row 4
    </span>
    <span
      className="css-137oz10"
    >
      full width row 5
    </span>
    <span
      className="css-137oz10"
    >
      full width row 6
    </span>
  </div>
</div>
`;
